--- a/src/styles/base/_general.scss
+++ b/src/styles/base/_general.scss
@@ -23,6 +23,8 @@ i {
 	overflow-x: hidden;
 	background-color: $light;
 	color: $dark;
+	-webkit-font-smoothing: antialiased!important;
+    text-rendering: optimizeLegibility!important;
 	background: url(../img/bg-svg.svg) 0px 140px no-repeat, 
 	url(../img/bg-svg.svg) 0px 1640px no-repeat,
 	url(../img/bg-svg.svg) 0px 3140px no-repeat,
