--- a/src/views/13-page.html
+++ b/src/views/13-page.html
@@ -103,7 +103,7 @@
                                                     </span>
                                                 </p>
                                                 <div class="service-table__table table">
-                                                    <div class="table__line table__line--head">
+                                                    <div class="table__line table__line--accent">
                                                         <div class="table__cell">
                                                             Заточка пил
                                                         </div>
@@ -172,7 +172,7 @@
                                                             </span>
                                                         </div>
                                                     </div>
-                                                    <div class="table__line table__line--head">
+                                                    <div class="table__line table__line--accent">
                                                         <div class="table__cell">
                                                             Заточка пил
                                                         </div>
@@ -241,7 +241,7 @@
                                                             </span>
                                                         </div>
                                                     </div>
-                                                    <div class="table__line table__line--head">
+                                                    <div class="table__line table__line--accent">
                                                         <div class="table__cell">
                                                             Заточка пил
                                                         </div>
@@ -310,7 +310,7 @@
                                                             </span>
                                                         </div>
                                                     </div>
-                                                    <div class="table__line table__line--head">
+                                                    <div class="table__line table__line--accent">
                                                         <div class="table__cell">
                                                             Заточка пил
                                                         </div>
