--- a/src/views/3-page.html
+++ b/src/views/3-page.html
@@ -52,7 +52,7 @@
                         <div class="catalog__main">
                             <div class="articles">
                                 <a href="" class="item">
-                                    <div class="item__thumb">
+                                    <div class="item__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
                                     </div>
                                     <p class="item__title">
@@ -60,7 +60,7 @@
                                     </p>
                                 </a>
                                 <a href="" class="item">
-                                    <div class="item__thumb">
+                                    <div class="item__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
                                     </div>
                                     <p class="item__title">
@@ -69,7 +69,7 @@
                                     </p>
                                 </a>
                                 <a href="" class="item">
-                                    <div class="item__thumb">
+                                    <div class="item__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
                                     </div>
                                     <p class="item__title">
@@ -78,7 +78,7 @@
                                     </p>
                                 </a>
                                 <a href="" class="item">
-                                    <div class="item__thumb">
+                                    <div class="item__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
                                     </div>
                                     <p class="item__title">
@@ -86,7 +86,7 @@
                                     </p>
                                 </a>
                                 <a href="" class="item">
-                                    <div class="item__thumb">
+                                    <div class="item__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
                                     </div>
                                     <p class="item__title">
@@ -94,7 +94,7 @@
                                     </p>
                                 </a>
                                 <a href="" class="item">
-                                    <div class="item__thumb">
+                                    <div class="item__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
                                     </div>
                                     <p class="item__title">
@@ -102,7 +102,7 @@
                                     </p>
                                 </a>
                                 <a href="" class="item">
-                                    <div class="item__thumb">
+                                    <div class="item__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
                                     </div>
                                     <p class="item__title">
@@ -110,7 +110,7 @@
                                     </p>
                                 </a>
                                 <a href="" class="item">
-                                    <div class="item__thumb">
+                                    <div class="item__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
                                     </div>
                                     <p class="item__title">
@@ -118,7 +118,7 @@
                                     </p>
                                 </a>
                                 <a href="" class="item">
-                                    <div class="item__thumb">
+                                    <div class="item__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
                                     </div>
                                     <p class="item__title">
@@ -126,7 +126,7 @@
                                     </p>
                                 </a>
                                 <a href="" class="item">
-                                    <div class="item__thumb">
+                                    <div class="item__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Петли BLUM под фальшпанель с углом открывания 83°">
                                     </div>
                                     <p class="item__title">
