--- a/src/views/6-page.html
+++ b/src/views/6-page.html
@@ -325,7 +325,7 @@
                             </div>
 
                             <div class="grid__column grid__column--8">
-                                <div class="grid__block">
+                                <div class="grid__block mobile-order mobile-order--4">
                                     <div class="product-video">
                                         <iframe width="560" height="315" src="https://www.youtube.com/embed/X4bgXH3sJ2Q" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
                                     </div>
@@ -343,7 +343,7 @@
                             </p>
                             <div class="articles product-articles__articles">
                                 <article href="" class="card card--small">
-                                    <a href class="card__thumb">
+                                    <a href class="card__thumb resized">
                                         <div class="card__tags"></div>
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                     </a>
@@ -425,7 +425,7 @@
                                 </article>
 
                                 <article href="" class="card card--small">
-                                    <a href class="card__thumb">
+                                    <a href class="card__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--blue">
@@ -511,7 +511,7 @@
                                 </article>
 
                                 <article href="" class="card card--small">
-                                    <a href class="card__thumb">
+                                    <a href class="card__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--orange">
@@ -597,7 +597,7 @@
                                 </article>
 
                                 <article href="" class="card card--small">
-                                    <a href class="card__thumb">
+                                    <a href class="card__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                         <div class="card__tags">
                                             <span class="card__tag card__tag--red">
@@ -683,7 +683,7 @@
                                 </article>
 
                                 <article href="" class="card card--small">
-                                    <a href class="card__thumb">
+                                    <a href class="card__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                     </a>
                                     <a href="" class="card__title">
@@ -764,7 +764,7 @@
                                 </article>
 
                                 <article href="" class="card card--small">
-                                    <a href class="card__thumb">
+                                    <a href class="card__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                     </a>
                                     <a href="" class="card__title">
@@ -845,7 +845,7 @@
                                 </article>
 
                                 <article href="" class="card card--small">
-                                    <a href class="card__thumb">
+                                    <a href class="card__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                     </a>
                                     <a href="" class="card__title">
@@ -926,7 +926,7 @@
                                 </article>
 
                                 <article href="" class="card card--small">
-                                    <a href class="card__thumb">
+                                    <a href class="card__thumb resized">
                                         <img src="http://placehold.it/900x600" alt="Название товара">
                                     </a>
                                     <a href="" class="card__title">
