--- a/src/views/9-page.html
+++ b/src/views/9-page.html
@@ -155,7 +155,7 @@
                                                 </p>
                                                 <div class="articles service-catalog__articles">
                                                     <article href="" class="card card--small">
-                                                        <a href class="card__thumb">
+                                                        <a href class="card__thumb resized">
                                                             <div class="card__tags"></div>
                                                             <img src="http://placehold.it/900x600" alt="Название товара">
                                                         </a>
@@ -237,7 +237,7 @@
                                                     </article>
 
                                                     <article href="" class="card card--small">
-                                                        <a href class="card__thumb">
+                                                        <a href class="card__thumb resized">
                                                             <img src="http://placehold.it/900x600" alt="Название товара">
                                                             <div class="card__tags">
                                                                 <span class="card__tag card__tag--blue">
@@ -323,7 +323,7 @@
                                                     </article>
 
                                                     <article href="" class="card card--small">
-                                                        <a href class="card__thumb">
+                                                        <a href class="card__thumb resized">
                                                             <img src="http://placehold.it/900x600" alt="Название товара">
                                                             <div class="card__tags">
                                                                 <span class="card__tag card__tag--orange">
@@ -409,7 +409,7 @@
                                                     </article>
 
                                                     <article href="" class="card card--small">
-                                                        <a href class="card__thumb">
+                                                        <a href class="card__thumb resized">
                                                             <img src="http://placehold.it/900x600" alt="Название товара">
                                                             <div class="card__tags">
                                                                 <span class="card__tag card__tag--red">
@@ -495,7 +495,7 @@
                                                     </article>
 
                                                     <article href="" class="card card--small">
-                                                        <a href class="card__thumb">
+                                                        <a href class="card__thumb resized">
                                                             <img src="http://placehold.it/900x600" alt="Название товара">
                                                         </a>
                                                         <a href="" class="card__title">
@@ -568,7 +568,7 @@
                                                     </article>
 
                                                     <article href="" class="card card--small">
-                                                        <a href class="card__thumb">
+                                                        <a href class="card__thumb resized">
                                                             <img src="http://placehold.it/900x600" alt="Название товара">
                                                         </a>
                                                         <a href="" class="card__title">
@@ -641,7 +641,7 @@
                                                     </article>
 
                                                     <article href="" class="card card--small">
-                                                        <a href class="card__thumb">
+                                                        <a href class="card__thumb resized">
                                                             <img src="http://placehold.it/900x600" alt="Название товара">
                                                         </a>
                                                         <a href="" class="card__title">
@@ -714,7 +714,7 @@
                                                     </article>
 
                                                     <article href="" class="card card--small">
-                                                        <a href class="card__thumb">
+                                                        <a href class="card__thumb resized">
                                                             <img src="http://placehold.it/900x600" alt="Название товара">
                                                         </a>
                                                         <a href="" class="card__title">
