--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -4070,11 +4070,11 @@ body.compensate-for-scrollbar {
   border: 1px solid #d9d9d9;
   border-radius: 3px;
   background: #fff;
-  box-shadow: inset 0 0 1px #fff, inset 0 1px 7px #ebebeb, 0 3px 6px -3px #bbb;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
 }
 
 .noUi-active {
-  box-shadow: inset 0 0 1px #fff, inset 0 1px 7px #ddd, 0 3px 6px -3px #bbb;
+  box-shadow: 2px 2px 4px rgba(0, 0, 0, 0.25);
 }
 
 [disabled] .noUi-connect {
@@ -4617,6 +4617,8 @@ i {
   overflow-x: hidden;
   background-color: #ffffff;
   color: #2E2E2E;
+  -webkit-font-smoothing: antialiased !important;
+  text-rendering: optimizeLegibility !important;
   background: url(../img/bg-svg.svg) 0px 140px no-repeat, url(../img/bg-svg.svg) 0px 1640px no-repeat, url(../img/bg-svg.svg) 0px 3140px no-repeat, url(../img/bg-svg.svg) 0px 4640px no-repeat, url(../img/bg-large-svg.svg) right 50px no-repeat, url(../img/bg-large-svg.svg) right 3250px no-repeat;
 }
 
@@ -5057,6 +5059,11 @@ i {
   font-weight: bold;
 }
 
+.table__line--accent {
+  background: #F9F9F9;
+  font-weight: bold;
+}
+
 .table__cell {
   padding: 20px 4px;
   box-sizing: border-box;
@@ -5077,6 +5084,10 @@ i {
 
 .table__cell--25 {
   width: 25%;
+}
+
+.table__cell--35 {
+  width: 35%;
 }
 
 .table__cell--45 {
@@ -5132,6 +5143,10 @@ i {
   text-decoration: line-through;
 }
 
+.table__text--strike span {
+  text-decoration: none;
+}
+
 .table__arrow {
   padding: 4px;
   cursor: pointer;
@@ -5146,9 +5161,12 @@ i {
   fill: #00C25A !important;
 }
 
+.table__mob-discript {
+  display: none;
+}
+
 .table-form {
   display: flex;
-  aling-items: center;
 }
 
 .table-form__input {
@@ -5974,6 +5992,20 @@ i {
   width: 100%;
   display: block;
   object-fit: cover;
+}
+
+.slider-top__pagination {
+  display: none;
+}
+
+.slider-top__btn {
+  display: none;
+  transition: 0.3s all;
+  transform: translateY(-22px);
+}
+
+.slider-top__btn--disabled {
+  opacity: 0.4;
 }
 
 .slider-bottom {
@@ -7057,7 +7089,6 @@ i {
   padding: 10px;
   background-color: #ffffff;
   margin-bottom: 16px;
-  background-color: green;
 }
 
 .front-partner--clear {
@@ -7092,6 +7123,7 @@ i {
   padding: 10px;
   box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);
   margin-bottom: 32px;
+  background-color: #ffffff;
 }
 
 .partner--clear {
@@ -7261,12 +7293,6 @@ i {
   display: block;
 }
 
-.product-params__t-head {
-  font-weight: 500;
-  font-size: 18px;
-  line-height: 24px;
-}
-
 .product-params__t-line {
   display: flex;
 }
@@ -7285,6 +7311,12 @@ i {
 
 .product-params__t-line p:nth-child(2n) {
   width: 35%;
+}
+
+.product-params__t-head {
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 24px;
 }
 
 .product-info {
@@ -7897,6 +7929,8 @@ i {
 .card {
   width: calc(20% - 16px);
   margin-bottom: 40px;
+  display: flex;
+  flex-direction: column;
 }
 
 .card--clear {
@@ -7978,6 +8012,7 @@ i {
 
 .card__content {
   margin-bottom: 16px;
+  flex-grow: 1;
 }
 
 .card__toolbar {
@@ -8325,6 +8360,10 @@ i {
     padding-right: 8px;
   }
 
+  .table__line {
+    font-size: 14px;
+  }
+
   .text iframe {
     height: 480px;
   }
@@ -8475,7 +8514,15 @@ i {
   .partner {
     width: calc(20% - 20px);
     margin-bottom: 20px;
-    height: 155px;
+  }
+
+  .single__partner {
+    width: auto;
+    margin-bottom: 20px;
+  }
+
+  .single__partner img {
+    max-width: 100%;
   }
 
   .single__offers {
@@ -8483,11 +8530,28 @@ i {
   }
 
   .catalog__side {
-    width: calc(100% / 12 * 3 - 10px);
+    width: calc(100% / 12 * 2.5 - 10px);
   }
 
   .catalog__main {
-    width: calc(100% / 12 * 9 - 10px);
+    width: calc(100% / 12 * 9.5 - 10px);
+  }
+
+  .toolbar {
+    padding: 10px;
+    font-size: 14px;
+  }
+
+  .sort-price__title {
+    margin-right: 20px;
+  }
+
+  .sort-price__dropdown {
+    width: 200px;
+  }
+
+  .sort-quanity__title {
+    margin-right: 20px;
   }
 
   .card {
@@ -8554,9 +8618,126 @@ i {
     font-size: 30px;
   }
 
+  .title-small {
+    font-size: 20px;
+    padding-left: 0px;
+  }
+
+  .title-small:after {
+    display: none;
+  }
+
+  .title-black {
+    font-size: 22px;
+  }
+
+  .date {
+    width: 100%;
+    display: inline-block;
+  }
+
+  .date__date {
+    display: inline-block;
+    font-size: 14px;
+    margin-right: 0px;
+    color: #2E2E2E;
+  }
+
+  .date__content {
+    display: inline-block;
+    font-size: 14px;
+    margin-right: 0px;
+  }
+
+  .date__mounth {
+    display: inline-block;
+    font-size: 14px;
+    margin-right: 0px;
+  }
+
+  .date__year {
+    display: inline-block;
+    font-size: 14px;
+    margin-right: 0px;
+  }
+
+  .link-file__icon {
+    height: 45px;
+    width: 45px;
+    margin-right: 12px;
+  }
+
+  .link-file__title strong {
+    display: block;
+    font-size: 14px;
+  }
+
+  .vacancy {
+    width: 100%;
+    margin-bottom: 16px;
+    padding: 15px 20px;
+  }
+
   .pagination__counter {
     margin-left: 20px;
     margin-right: 20px;
+  }
+
+  .table__line:nth-child(2n) {
+    background: #F9F9F9;
+  }
+
+  .table__line {
+    display: block;
+    padding: 15px;
+  }
+
+  .table__line--head {
+    display: none;
+  }
+
+  .table__cell {
+    width: 100%;
+    padding: 0px;
+    margin-bottom: 8px;
+  }
+
+  .table__mob-discript {
+    font-weight: bold;
+    display: inline;
+  }
+
+  .table-form {
+    max-width: 320px;
+  }
+
+  .text {
+    font-size: 14px;
+  }
+
+  .text picture {
+    padding-right: 0px;
+  }
+
+  .text ul {
+    list-style-position: inside;
+    padding-left: 0px;
+  }
+
+  .marker-block {
+    display: flex;
+    margin-bottom: 15px;
+  }
+
+  .marker-block svg {
+    width: 22px;
+    height: 22px;
+    margin-right: 15px;
+  }
+
+  .marker-block span,
+  .marker-block a {
+    font-size: 16px;
   }
 
   .accent-line {
@@ -8681,6 +8862,7 @@ i {
   .breadcrumbs {
     padding-top: 20px;
     padding-bottom: 20px;
+    margin-bottom: 20px;
   }
 
   .breadcrumbs__link {
@@ -8694,8 +8876,37 @@ i {
     margin-right: 8px;
   }
 
+  .gallery__item {
+    height: 180px;
+    width: calc(100% / 3 - 12px);
+  }
+
   .slider {
-    margin-bottom: 30px;
+    margin-bottom: 0px;
+  }
+
+  .slider-top {
+    margin-bottom: 0px;
+  }
+
+  .slider-top__slide {
+    height: 100%;
+  }
+
+  .slider-top__pagination {
+    display: block;
+    text-align: center;
+    padding-top: 10px;
+    padding-bottom: 10px;
+  }
+
+  .slider-top__btn {
+    display: block;
+    color: #2E2E2E;
+  }
+
+  .slider-bottom {
+    display: none;
   }
 
   .filter {
@@ -8843,15 +9054,21 @@ i {
     display: block;
     padding: 20px 15px;
     border-radius: 4px;
+    font-size: 14px;
   }
 
   .article__column--date {
     padding: 0px;
-    margin-bottom: 20px;
+    margin-bottom: 10px;
   }
 
   .article__column--text {
     padding: 0px;
+  }
+
+  .article__title {
+    margin-bottom: 10px;
+    font-size: 20px;
   }
 
   .about {
@@ -8890,6 +9107,33 @@ i {
     margin-bottom: 8px;
   }
 
+  .partner {
+    width: calc(20% - 12px);
+    margin-bottom: 12px;
+  }
+
+  .single__columns {
+    display: block;
+    margin-bottom: 0px;
+  }
+
+  .single__column {
+    width: 100%;
+  }
+
+  .single__markers {
+    display: block;
+    margin-bottom: 20px;
+  }
+
+  .product {
+    margin-bottom: 50px;
+  }
+
+  .product__grid {
+    margin-bottom: 20px;
+  }
+
   .product-articles__title {
     margin-bottom: 26px;
   }
@@ -8903,8 +9147,77 @@ i {
     margin: 0px;
   }
 
+  .product-params {
+    margin-bottom: 10px;
+  }
+
+  .product-params__t-line {
+    display: block;
+    border: 1px solid #BDBDBD;
+    padding: 10px;
+  }
+
+  .product-params__t-line p {
+    padding: 0px;
+  }
+
+  .product-params__t-line p:nth-child(2n + 1) {
+    width: 100%;
+    margin-bottom: 5px;
+    font-weight: bold;
+  }
+
+  .product-params__t-line p:nth-child(2n) {
+    width: 100%;
+  }
+
+  .product-params__t-head {
+    display: none;
+  }
+
+  .product-info__line {
+    margin-bottom: 10px;
+  }
+
+  .product-info__line strong {
+    display: block;
+  }
+
+  .product-files {
+    margin-bottom: 0px;
+  }
+
+  .product-card {
+    box-shadow: none;
+    background: none;
+    padding: 0px;
+    margin-bottom: 25px;
+  }
+
   .product-card__title {
     display: none !important;
+  }
+
+  .product-card__btn {
+    margin-bottom: 10px;
+  }
+
+  .product-card__favorite svg {
+    height: 22px;
+    width: 22px;
+    margin-right: 6px;
+  }
+
+  .product-card__favorite span {
+    font-size: 16px;
+  }
+
+  .product-video iframe {
+    height: 480px;
+  }
+
+  .catalog {
+    margin-bottom: 60px;
   }
 
   .catalog__content {
@@ -8921,8 +9234,8 @@ i {
     width: 100%;
   }
 
-  .toolbar {
-    padding: 10px;
+  .catalog__header {
+    margin-bottom: 20px;
   }
 
   .toolbar__spreader {
@@ -8995,6 +9308,20 @@ i {
     font-size: 20px;
     margin: 0px;
     margin-bottom: 25px;
+  }
+
+  .contacts__columns {
+    display: block;
+    padding-right: 0px;
+    margin-bottom: 0px;
+  }
+
+  .contacts__column {
+    width: 100%;
+  }
+
+  .contacts__map {
+    height: 400px;
   }
 }
 
@@ -9082,6 +9409,26 @@ i {
   }
 }
 
+@media only screen and (max-width: 740px) {
+  .partner {
+    width: calc(100% / 3 - 12px);
+    margin-bottom: 12px;
+  }
+}
+
+@media only screen and (max-width: 700px) {
+  .gallery__item {
+    height: 180px;
+    width: calc(100% / 2 - 8px);
+  }
+}
+
+@media only screen and (max-width: 680px) {
+  .product-video iframe {
+    height: 300px;
+  }
+}
+
 @media (max-width: 576px) {
   .fancybox-thumbs {
     width: 110px;
@@ -9099,6 +9446,19 @@ i {
 @media only screen and (max-width: 550px) {
   .card {
     width: 100%;
+  }
+}
+
+@media only screen and (max-width: 480px) {
+  .gallery__item {
+    display: block;
+    height: auto;
+    width: 100%;
+  }
+
+  .partner {
+    width: calc(100% / 2 - 6px);
+    margin-bottom: 12px;
   }
 }
 
