--- a/src/blocks/modules/catalog/catalog.scss
+++ b/src/blocks/modules/catalog/catalog.scss
@@ -1,5 +1,8 @@
 .catalog {
 	margin-bottom: 100px;
+	@include r(1200) {
+		margin-bottom: 60px;
+	}
 	&__content {
 		display: flex;
 		justify-content: space-between;
@@ -13,7 +16,7 @@
 	&__side {
 		width: calc(100% / 12 * 2 - 16px);
 		@include r(1700) {
-			width: calc(100% / 12 * 3 - 10px);
+			width: calc(100% / 12 * 2.5 - 10px);
 		}
 		@include r(1200) {
 			width: 300px;
@@ -24,7 +27,7 @@
 	&__main {
 		width: calc(100% / 12 * 10 - 16px);
 		@include r(1700) {
-			width: calc(100% / 12 * 9 - 10px);
+			width: calc(100% / 12 * 9.5 - 10px);
 		}
 		@include r(1200) {
 			width: 100%;
@@ -32,6 +35,9 @@
 	}
 	&__header {
 		margin-bottom: 35px;
+		@include r(1200) {
+			margin-bottom: 20px;
+		}
 	}
 }
 
@@ -41,8 +47,9 @@
 	color: $light;
 	display: flex;
 	align-items: center;
-	@include r(1200) {
+	@include r(1700) {
 		padding: 10px;
+		font-size: 14px;
 	}
 	&__spreader {
 		flex-grow: 1;
@@ -135,6 +142,9 @@
 	&__title {
 		margin-bottom: 0px;
 		margin-right: 57px;
+		@include r(1700) {
+			margin-right: 20px;
+		}
 		@include r(1200) {
 			margin-right: 0px;
 			padding-left: 10px;
@@ -143,6 +153,9 @@
 	&__dropdown {
 		position: relative;
 		width: 260px;
+		@include r(1700) {
+			width: 200px;
+		}
 		@include r(1200) {
 			width: auto;
 		}
@@ -478,6 +491,9 @@
 	}
 	&__title {
 		margin-right: 24px;
+		@include r(1700) {
+			margin-right: 20px;
+		}
 	}
 	&__btn {
 		padding: 10px;
@@ -503,6 +519,8 @@
 .card {
 	width: calc(20% - 16px);
 	margin-bottom: 40px;
+	display: flex;
+    flex-direction: column;
 	@include r(1700) {
 		width: calc(25% - 10px);
 	}
@@ -578,6 +596,7 @@
 	}
 	&__content {
 		margin-bottom: 16px;
+		flex-grow: 1;
 	}
 	&__toolbar {
 		margin-bottom: 17px;
