--- a/src/blocks/modules/gallery/gallery.scss
+++ b/src/blocks/modules/gallery/gallery.scss
@@ -12,6 +12,19 @@
 		@include r(1700) {
 			height: 210px;
 		}
+		@include r(1200) {
+			height: 180px;
+			width: calc(100% / 3 - 12px);
+		}
+		@include r(700) {
+			height: 180px;
+			width: calc(100% / 2 - 8px);
+		}
+		@include r(480) {
+			display: block;
+			height: auto;
+			width: 100%;
+		}
 		img {
 			object-position: center;
 			height: 100%;
