--- a/src/blocks/modules/news/news.scss
+++ b/src/blocks/modules/news/news.scss
@@ -34,6 +34,7 @@
 		display: block;
 		padding: 20px 15px;
 		border-radius: 4px;
+		font-size: 14px;
 	}
 	&__column {
 		&--date {
@@ -41,7 +42,7 @@
 			flex-shrink: 0;
 			@include r(1200) {
 				padding: 0px;
-				margin-bottom: 20px;
+				margin-bottom: 10px;
 			}
 		}
 		&--text {
@@ -57,6 +58,10 @@
 		font-size: 20px;
 		margin-bottom: 20px;
 		line-height: 1.3;
+		@include r(1200) {
+			margin-bottom: 10px;
+			font-size: 20px;
+		}
 	}
 }
 
