--- a/src/blocks/modules/partners/partners.scss
+++ b/src/blocks/modules/partners/partners.scss
@@ -45,7 +45,6 @@
 	padding: 10px;
 	background-color: $light;
 	margin-bottom: 16px;
-	background-color: green;
 	@include r(1700) {
 		width: calc(100% / 12 - 20px);
 		margin-bottom: 10px;
@@ -93,11 +92,22 @@
 	padding: 10px;
 	box-shadow: 0px 4px 30px rgba(0, 0, 0, 0.1);
 	margin-bottom: 32px;
+	background-color: $light;
 	@include r(1700) {
-		// width: 180px;
 		width: calc(20% - 20px);
 		margin-bottom: 20px;
-		height: 155px;
+	}
+	@include r(1200) {
+		width: calc(20% - 12px);
+		margin-bottom: 12px;
+	}
+	@include r(740) {
+		width: calc(100% / 3 - 12px);
+		margin-bottom: 12px;
+	}
+	@include r(480) {
+		width: calc(100% / 2 - 6px);
+		margin-bottom: 12px;
 	}
 	&--clear {
 		height: 0px !important;
