--- a/src/blocks/modules/product/product.scss
+++ b/src/blocks/modules/product/product.scss
@@ -1,7 +1,13 @@
 .product {
 	margin-bottom: 100px;
+	@include r(1200) {
+		margin-bottom: 50px;
+	}
 	&__grid {
 		margin-bottom: 100px;
+		@include r(1200) {
+			margin-bottom: 20px;
+		}
 	}
 }
 
@@ -33,30 +39,52 @@
 
 .product-params {
 	margin-bottom: 40px;
+	@include r(1200) {
+		margin-bottom: 10px;
+	}
 	&__title {
 		margin-bottom: 40px;
 	}
 	&__table {
 		display: block;
 	}
-	&__t-head {
-		font-weight: 500;
-		font-size: 18px;
-		line-height: 24px;
-	}
 	&__t-line {
 		display: flex;
+		@include r(1200) {
+			display: block;
+			border: 1px solid #BDBDBD;
+			padding: 10px;
+		}
 		&:nth-child(2n + 1) {
 			background-color: #F9F9F9;
 		}
 		p {
 			padding: 11px 17px;
+			@include r(1200) {
+				padding: 0px;
+			}
 			&:nth-child(2n + 1) {
 				width: 65%;
+				@include r(1200) {
+					width: 100%;
+					margin-bottom: 5px;
+					font-weight: bold;
+				}
 			}
 			&:nth-child(2n) {
 				width: 35%;
+				@include r(1200) {
+					width: 100%;
+				}
 			}
+		}
+	}
+	&__t-head {
+		font-weight: 500;
+		font-size: 18px;
+		line-height: 24px;
+		@include r(1200) {
+			display: none;
 		}
 	}
 }
@@ -70,15 +98,24 @@
 
 	}
 	&__line {
+		@include r(1200) {
+			margin-bottom: 10px;
+		}
 		strong {
 			margin-right: 10px;
 			font-weight: bold;
+			@include r(1200) {
+				display: block;
+			}
 		}
 	}
 }
 
 .product-files {
 	margin-bottom: 40px;
+	@include r(1200) {
+		margin-bottom: 0px;
+	}
 	&__title {
 		margin-bottom: 26px;
 	}
@@ -88,6 +125,12 @@
 	background-color: $light;
 	box-shadow: 2px 4px 30px rgba(0, 0, 0, 0.14);
 	padding: 30px 30px 40px 40px;
+	@include r(1200) {
+		box-shadow: none;
+		background: none;
+		padding: 0px;
+		margin-bottom: 25px;
+	}
 	&__title {
 		// margin-bottom: 34px;
 		font-weight: bold;
@@ -141,6 +184,9 @@
 		padding-right: 27px;
 		text-transform: uppercase;
 		margin-bottom: 22px;
+		@include r(1200) {
+			margin-bottom: 10px;
+		}
 	}
 	&__favorite {
 		height: 30px;
@@ -157,12 +203,20 @@
 			height: 30px;
 			width: 30px;
 			margin-right: 8px;
+			@include r(1200) {
+				height: 22px;
+				width: 22px;
+				margin-right: 6px;
+			}
 		}
 		span {
 			font-weight: bold;
 			font-size: 20px;
 			text-transform: uppercase;
 			color: #828282;
+			@include r(1200) {
+				font-size: 16px;
+			}
 		}
 	}
 }
@@ -171,6 +225,12 @@
 	iframe {
 		height: 610px;
 		width: 100%;
+		@include r(1200) {
+			height: 480px;
+		}
+		@include r(680) {
+			height: 300px;
+		}
 	}
 }
 
