--- a/src/blocks/modules/single/single.scss
+++ b/src/blocks/modules/single/single.scss
@@ -13,9 +13,16 @@
 		display: flex;
 		justify-content: space-between;
 		flex-wrap:wrap;
+		@include r(1200) {
+			display: block;
+			margin-bottom: 0px;
+		}
 	}
 	&__column {
 		margin-bottom: 40px;
+		@include r(1200) {
+			width: 100%;
+		}
 		&--4 {
 			width: calc(100% / 12 * 4 - 16px);
 		}
@@ -50,10 +57,17 @@
 		display: block;
 		margin-bottom: 48px;
 		width: fit-content;
+		@include r(1700) {
+			width: auto;
+			margin-bottom: 20px;
+		}
 		img {
 			display: block;
 			width: 248px;
 			height: auto;
+			@include r(1700) {
+				max-width: 100%;
+			}
 		}
 		&:hover {
 			opacity: 0.7;
@@ -80,6 +94,10 @@
 		display: flex;
 		align-items: center;
 		justify-content: space-between;
+		@include r(1200) {
+			display: block;
+			margin-bottom: 20px;
+		}
 	}
 	&__text {
 		margin-bottom: 40px;
