--- a/src/blocks/modules/slider/slider.scss
+++ b/src/blocks/modules/slider/slider.scss
@@ -1,7 +1,7 @@
 .slider {
 	margin-bottom: 48px;
 	@include r(1200) {
-		margin-bottom: 30px;
+		margin-bottom: 0px;
 	}
 }
 
@@ -9,18 +9,44 @@
 	width: 100%;
 	margin-bottom: 32px;
 	overflow: hidden;
-	
+	@include r(1200) {
+		margin-bottom: 0px;
+	}
 	&__slide {
 		display: flex;
 		justify-content: center;
 		align-items: center;
 		// height: 100%;
 		height: 528px;
+		@include r(1200) {
+			height: 100%;
+		}
 		img {
 			height: 100%;
 			width: 100%;
 			display: block;
 			object-fit: cover;
+		}
+	}
+	&__pagination {
+		display: none;
+		@include r(1200) {
+			display: block;
+			text-align: center;
+			padding-top: 10px;
+			padding-bottom: 10px;
+		}
+	}
+	&__btn {
+		display: none;
+		transition: 0.3s all;
+		transform: translateY(-22px);
+		@include r(1200) {
+			display: block;
+			color: $dark;
+		}
+		&--disabled {
+			opacity: 0.4;
 		}
 	}
 }
@@ -29,6 +55,9 @@
 	height: 108px;
 	overflow: hidden;
 	position: relative;
+	@include r(1200) {
+		display: none;
+	}
 	&__slide {
 		display: flex;
 		justify-content: center;
