--- a/src/styles/base/_ui.scss
+++ b/src/styles/base/_ui.scss
@@ -87,6 +87,13 @@
 	padding-left: 20px;
 	line-height: 1.2;
 	width: fit-content;
+	@include r(1200) {
+		font-size: 20px;
+		padding-left: 0px;
+		&:after {
+			display: none;
+		}
+	}
 	&--product {
 		font-size: 20px;
 		&:after {
@@ -113,6 +120,9 @@
 	font-weight: bold;
 	font-size: 30px;
 	line-height: 1.2;
+	@include r(1200) {
+		font-size: 22px;
+	}
 }
 
 .date {
@@ -120,6 +130,10 @@
 	align-items: flex-end;
 	width: 178px;
 	flex-shrink: 0;
+	@include r(1200) {
+		width: 100%;
+		display: inline-block;
+	}
 	&__date {
 		font-weight: bold;
 		font-size: 80px;
@@ -127,17 +141,40 @@
 		line-height: 0.88;
 		margin-right: 10px;
 		flex-shrink: 0;
+		@include r(1200) {
+			display: inline-block;
+			font-size: 14px;
+			margin-right: 0px;
+			color: $dark;
+		}
+	}
+	&__content {
+		@include r(1200) {
+			display: inline-block;
+			font-size: 14px;
+			margin-right: 0px;
+		}
 	}
 	&__mounth {
 		font-weight: bold;
 		font-size: 20px;
 		line-height: 23px;
+		@include r(1200) {
+			display: inline-block;
+			font-size: 14px;
+			margin-right: 0px;
+		}
 	}
 	&__year {
 		color: #BDBDBD;
 		font-weight: bold;
 		font-size: 30px;
 		line-height: 1;
+		@include r(1200) {
+			display: inline-block;
+			font-size: 14px;
+			margin-right: 0px;
+		}
 	}
 }
 
@@ -224,12 +261,21 @@
 		display: block;
 		margin-right: 19px;
 		flex-shrink: 0;
+		@include r(1200) {
+			height: 45px;
+			width: 45px;
+			margin-right: 12px;
+		}
 	}
 	&__title {
 		strong {
 			transition: 0.3s all;
 			color: #BDBDBD;
 			text-decoration: underline;
+			@include r(1200) {
+				display: block;
+				font-size: 14px;
+			}
 		}
 	}
 }
@@ -243,19 +289,11 @@
 	color: $dark;
 	width: calc(50% - 16px);
 	margin-bottom: 32px;
-	// &__title {
-	// 	line-height: 1.3;
-	// 	margin-bottom: 20px;
-	// 	font-weight: bold;
-	// 	font-size: 20px;
-	// }
-	// &__discript {
-
-	// }
-	// &__link {
-	// 	text-decoration: underline;
-	// 	color: $green;
-	// }
+	@include r(1200) {
+		width: 100%;
+		margin-bottom: 16px;
+		padding: 15px 20px;
+	}
 	&__content {
 		
 	}
@@ -362,15 +400,42 @@
 		&:last-child {
 			border-bottom: 0px;
 		}
+		&:nth-child(2n) {
+			@include r(1200) {
+				background: #F9F9F9;
+			}
+		}
+		@include r(1700) {
+			font-size: 14px;
+		}
+		@include r(1200) {
+			display: block;
+			padding: 15px;
+		}
 		&--head {
 			background: #F9F9F9;
 			font-weight: bold;
+			@include r(1200) {
+				display: none;
+			}
+		}
+		&--accent {
+			background: #F9F9F9;
+			font-weight: bold;
+			// @include r(1200) {
+			// 	background: inherit;
+			// }
 		}
 	}
 	&__cell {
 		padding: 20px 4px;
 		box-sizing: border-box;
 		flex-shrink: 1;
+		@include r(1200) {
+			width: 100%;
+			padding: 0px;
+			margin-bottom: 8px;
+		}
 		&--10 {
 			width: 10%;
 		}
@@ -382,6 +447,9 @@
 		}
 		&--25 {
 			width: 25%;
+		}
+		&--35 {
+			width: 35%;
 		}
 		&--45 {
 			width: 45%;
@@ -424,6 +492,9 @@
 		flex-grow: 1;
 		&--strike {
 			text-decoration: line-through;
+			span {
+				text-decoration: none;
+			}
 		}
 	}
 	&__control {
@@ -440,11 +511,21 @@
 			fill: $green !important;
 		}
 	}
+	&__mob-discript {
+		display: none;
+		@include r(1200) {
+			font-weight: bold;
+			display: inline;
+		}
+	}
 }
 
 .table-form {
 	display: flex;
-	aling-items: center;
+	// align-items: center;
+	@include r(1200) {
+		max-width: 320px;
+	}
 	&__input {
 		box-sizing: border-box;
 		border: 1px solid #E5E5E5;
