--- a/src/views/21-page.html
+++ b/src/views/21-page.html
@@ -51,37 +51,37 @@
                         </div>
                         <div class="catalog__main">
                             <div class="articles">
-                                <a href="" class="partner">
+                                <a href="" class="partner resized">
                                     <img src="img/partner-1.png" alt="" class="front-partner__img">
                                 </a>
-                                <a href="" class="partner">
+                                <a href="" class="partner resized">
                                     <img src="img/partner-2.png" alt="" class="front-partner__img">
                                 </a>
-                                <a href="" class="partner">
+                                <a href="" class="partner resized">
                                     <img src="img/partner-3.png" alt="" class="front-partner__img">
                                 </a>
-                                <a href="" class="partner">
+                                <a href="" class="partner resized">
                                     <img src="img/partner-4.png" alt="" class="front-partner__img">
                                 </a>
-                                <a href="" class="partner">
+                                <a href="" class="partner resized">
                                     <img src="img/partner-5.png" alt="" class="front-partner__img">
                                 </a>
-                                <a href="" class="partner">
+                                <a href="" class="partner resized">
                                     <img src="img/partner-4.png" alt="" class="front-partner__img">
                                 </a>
-                                <a href="" class="partner">
+                                <a href="" class="partner resized">
                                     <img src="img/partner-3.png" alt="" class="front-partner__img">
                                 </a>
-                                <a href="" class="partner">
+                                <a href="" class="partner resized">
                                     <img src="img/partner-1.png" alt="" class="front-partner__img">
                                 </a>
-                                <a href="" class="partner">
+                                <a href="" class="partner resized">
                                     <img src="img/partner-5.png" alt="" class="front-partner__img">
                                 </a>
-                                <a href="" class="partner">
+                                <a href="" class="partner resized">
                                     <img src="img/partner-2.png" alt="" class="front-partner__img">
                                 </a>
-                                <a href="" class="partner">
+                                <a href="" class="partner resized">
                                     <img src="img/partner-2.png" alt="" class="front-partner__img">
                                 </a>
                                 <div class="partner partner--clear"></div>
