--- a/src/blocks/modules/header/header.scss
+++ b/src/blocks/modules/header/header.scss
@@ -97,6 +97,9 @@
 		color: $light;
 		margin-right: 56px;
 		text-transform: uppercase;
+		&--active {
+			color: $green;
+		}
 		&:hover {
 			opacity: 0.7;
 		}
