--- a/src/blocks/modules/modal/modal.scss
+++ b/src/blocks/modules/modal/modal.scss
@@ -1,8 +1,11 @@
 .modal-menu {
 	background-color: $light;
 	min-height: 120vh;
-	padding-top: 50px;
+	// padding-top: 100px;
 	padding-bottom: 50px;
+	position: relative;
+	display: block;
+	width: 100%;
 	&__main-title {
 		margin-bottom: 20px;
 	}
@@ -42,6 +45,12 @@
 			opacity: 0.7;
 		}
 	}
+	&__nav {
+		background-color: $black;
+		margin-bottom: 35px;
+		padding-top: 15px;
+		padding-bottom: 15px;
+	}
 }
 
 .modal-write {
@@ -71,4 +80,9 @@
 	&__text {
 		width: calc(50% - 16px);
 	}
+}
+
+.fancybox-content {
+	width: 100%;
+	padding: 0px;
 }
