--- a/docs/styles/main.css
+++ b/docs/styles/main.css
@@ -5870,9 +5870,18 @@ i {
   width: calc(50% - 16px);
 }
 
-.fancybox-content {
+.fancybox-container--menu .fancybox-content {
   width: 100%;
   padding: 0px;
+}
+
+.fancybox-container--menu .fancybox-close-small {
+  color: #ffffff !important;
+  height: 54px;
+  width: 54px;
+  transition: 0.3s all;
+  top: 7px;
+  right: 0px;
 }
 
 .breadcrumbs {
@@ -8429,6 +8438,10 @@ i {
   .bottom__btn {
     width: 280px;
     border-radius: 4px;
+  }
+
+  .fancybox-container--menu .fancybox-close-small {
+    top: 15px;
   }
 
   .gallery__item {
