--- a/src/styles/base/_ui.scss
+++ b/src/styles/base/_ui.scss
@@ -53,7 +53,8 @@
 		color: $light;
 	}
 	&--gray {
-		background: #E5E5E5;
+		background: #BDBDBD;
+		color: $light;
 	}
 	&--light {
 		color: $dark;
