--- a/src/styles/base/_layout.scss
+++ b/src/styles/base/_layout.scss
@@ -46,6 +46,12 @@
 			margin-bottom: 0px;
 			width: 100%;
 		}
+		&--1 {
+			width: calc(100% / 12 * 1 - 12px);
+		}
+		&--2 {
+			width: calc(100% / 12 * 2 - 12px);
+		}
 		&--3 {
 			width: calc(100% / 12 * 3 - 12px);
 		}
@@ -73,6 +79,46 @@
 			@include r(1200) {
 				position: static;
 			}
+		}
+	}
+}
+
+.subgrid {
+	display: flex;
+	justify-content: space-between;
+	flex-wrap: wrap;
+	&__column {
+		margin-bottom: 50px;
+		@include r(1200) {
+			margin-bottom: 0px;
+			width: 100%;
+		}
+		&--1 {
+			width: calc(100% / 10 * 1 - 12px);
+		}
+		&--2 {
+			width: calc(100% / 10 * 2 - 12px);
+		}
+		&--3 {
+			width: calc(100% / 10 * 3 - 12px);
+		}
+		&--4 {
+			width: calc(100% / 10 * 4 - 12px);
+		}
+		&--5 {
+			width: calc(100% / 10 * 5 - 12px);
+		}
+		&--6 {
+			width: calc(100% / 10 * 6 - 12px);
+		}
+		&--7 {
+			width: calc(100% / 10 * 7 - 12px);
+		}
+		&--8 {
+			width: calc(100% / 10 * 8 - 12px);
+		}
+		&--9 {
+			width: calc(100% / 10 * 9 - 12px);
 		}
 	}
 }
