--- a/src/styles/base/_text.scss
+++ b/src/styles/base/_text.scss
@@ -87,6 +87,12 @@
 	// 	line-height: 2;
 	// 	font-size: inherit;
 	// }
+	.btn {
+		color: $light;
+		padding-left: 53px;
+		padding-right: 53px;
+		margin-bottom: 1em;
+	}
 }
 
 .text-green {
