--- a/src/views/31-page.html
+++ b/src/views/31-page.html
@@ -40,74 +40,103 @@
                             </div>
                             <div class="single__column single__column--10">
                                 <h2 class="title single__title">
-                                    данные пользователя
+                                    Оформление заказа
                                 </h2>
-                                <div class="text single__text">
-                                    <p>
-                                        История «Балтламинат» насчитывает более 19 лет и все это время компания неуклонно идет вперед, постоянно расширяя свои возможности для клиентов и предлагая им самые качественные и современные услуги и товары по направлениям:
-                                    </p>
-                                    <ul>
-                                        <li>
-                                            <span>
-                                                плитный материал;
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <span>
-                                                кромочный материал;
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <span>
-                                                мебельная фурнитура «премиум» и «стандарт» класса;
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <span>
-                                                стулья и кресла для офиса;
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <span>
-                                                ламинированные полы;
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <span>
-                                                мебельные фасады;
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <span>
-                                                изготовление раздвижных дверей системы «купе»;
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <span>
-                                                услуги по обработке и изготовлению деталей мебели по индивидуальным размерам и эскизам. Выполняется комплекс работ: распил, 
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <span>
-                                                кромкование. Распил (раскрой) прямолинейных и криволинейных деталей из ЛДСП, столешниц, стеновых панелей, ХДФ.
-                                            </span>
-                                        </li>
-                                    </ul>
-                                    <p>
-                                        Динамично развиваясь все 19 лет компания «Балтламинат» стала лидером на рынке товаров и услуг для производителей корпусной мебели в Калининградской области. 
-                                    </p>
-                                    <p>
-                                        Учитывая потребности производителей и современные тенденции мебельной индустрии, Компания постоянно предлагает клиентам качественные товары ведущих европейских производителей, позволяющие сохранять им лидерство на рынке.
-                                    </p>
-                                    <p>
-                                        Уникальность компании «Балтламинат» отражает наш девиз: «Все для производства мебели». Это означает, что материалы, фурнитура и производственные услуги сосредоточены в одном месте для удобства наших клиентов.
-                                    </p>
-                                    <p>
-                                        Особенностью также является то, что клиент «Балтламинат» может приобрести в компании не только фурнитуру и материалы для производства мебели, но и заказать изготовление отдельных деталей. Работы ведутся квалифицированными специалистами на высокотехнологичном оборудовании с использованием материалов известных мировых брендов.
-                                    </p>
-                                    <p>
-                                        «Балтламинат» специализируется на различных материалах для производства мебели. Компания предоставляет услуги по подготовке мебельных деталей к непосредственной сборке изделия: распил по вашим размерам и оклейка кромкой. Новейшее оборудование из Германии позволяет делать не только стандартные, но и необычные фигурные детали мебели по индивидуальным эскизам заказчика. Принесите размеры задуманного вами предмета интерьера и услуги компании Балтламинат позволят воплотить его в жизнь, а широкий ассортимент и наличие на складе столешниц, готовых фасадов, плитных материалов, кромочной ленты и самой разнообразной мебельной фурнитуры, а также стульев и ламината дают возможность реализовать задуманное в кратчайшие сроки.
-                                    </p>
+                                <div class="subgrid">
+                                    <div class="subgrid__column subgrid__column--6">
+                                        <form action="" class="lk-form">
+                                            <div class="lk-form__section">
+                                                <p class="lk-info-line">
+                                                    <span class="lk-info-line__head">
+                                                        Имя
+                                                    </span>
+                                                    Юрий
+                                                </p>
+                                                <p class="lk-info-line">
+                                                    <span class="lk-info-line__head">
+                                                        Фамилия
+                                                    </span>
+                                                    Стаканов
+                                                </p>
+                                                <p class="lk-info-line">
+                                                    <span class="lk-info-line__head">
+                                                        Телефон
+                                                    </span>
+                                                    +7 (981) 48-65-78
+                                                </p>
+                                                <p class="lk-info-line">
+                                                    <span class="lk-info-line__head">
+                                                        E-mail
+                                                    </span>
+                                                    youstakan
+                                                </p>
+                                            </div>
+                                            <div class="lk-form__section">
+                                                <p class="title-small lk-form__title">
+                                                    <span>Название компании</span>
+                                                </p>
+                                                <div class="lk-field">
+                                                    <p class="lk-field__title">
+                                                        Если вы представляете какую-либо организации, впишите сюда её название:
+                                                    </p>
+                                                    <div class="lk-field__wrapper">
+                                                        <input type="text" class="lk-input lk-field__input" placeholder="ООО “Мебель на заказ”">
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="lk-form__section">
+                                                <p class="title-small lk-form__title">
+                                                    <span>Адрес доставки</span>
+                                                </p>
+                                                <div class="lk-form__grid">
+                                                    <div class="lk-field">
+                                                        <p class="lk-field__title">
+                                                            Город, поселок
+                                                        </p>
+                                                        <div class="lk-field__wrapper">
+                                                            <input type="text" class="lk-input lk-field__input" placeholder="">
+                                                        </div>
+                                                    </div>
+                                                    <div class="lk-field lk-field--50">
+                                                        <p class="lk-field__title">
+                                                            Индекс
+                                                        </p>
+                                                        <div class="lk-field__wrapper">
+                                                            <input type="text" class="lk-input lk-field__input" placeholder="">
+                                                        </div>
+                                                    </div>
+                                                    <div class="lk-field lk-field--50">
+                                                        <p class="lk-field__title">
+                                                            Улица
+                                                        </p>
+                                                        <div class="lk-field__wrapper">
+                                                            <input type="text" class="lk-input lk-field__input" placeholder="">
+                                                        </div>
+                                                    </div>
+                                                    <div class="lk-field lk-field--50">
+                                                        <p class="lk-field__title">
+                                                            Дом
+                                                        </p>
+                                                        <div class="lk-field__wrapper">
+                                                            <input type="text" class="lk-input lk-field__input" placeholder="">
+                                                        </div>
+                                                    </div>
+                                                    <div class="lk-field lk-field--50">
+                                                        <p class="lk-field__title">
+                                                            Квартира
+                                                        </p>
+                                                        <div class="lk-field__wrapper">
+                                                            <input type="text" class="lk-input lk-field__input" placeholder="">
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <a href="" class="btn btn--dark lk-form__btn">
+                                                Сохранить
+                                            </a>
+                                        </form>
+                                    </div>
+                                    <div class="subgrid__column subgrid__column--1"></div>
                                 </div>
                             </div>
 
