--- a/src/views/35-page.html
+++ b/src/views/35-page.html
@@ -44,73 +44,13 @@
                                 </h2>
                                 <div class="text single__text">
                                     <p>
-                                        История «Балтламинат» насчитывает более 19 лет и все это время компания неуклонно идет вперед, постоянно расширяя свои возможности для клиентов и предлагая им самые качественные и современные услуги и товары по направлениям:
-                                    </p>
-                                    <ul>
-                                        <li>
-                                            <span>
-                                                плитный материал;
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <span>
-                                                кромочный материал;
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <span>
-                                                мебельная фурнитура «премиум» и «стандарт» класса;
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <span>
-                                                стулья и кресла для офиса;
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <span>
-                                                ламинированные полы;
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <span>
-                                                мебельные фасады;
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <span>
-                                                изготовление раздвижных дверей системы «купе»;
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <span>
-                                                услуги по обработке и изготовлению деталей мебели по индивидуальным размерам и эскизам. Выполняется комплекс работ: распил, 
-                                            </span>
-                                        </li>
-                                        <li>
-                                            <span>
-                                                кромкование. Распил (раскрой) прямолинейных и криволинейных деталей из ЛДСП, столешниц, стеновых панелей, ХДФ.
-                                            </span>
-                                        </li>
-                                    </ul>
-                                    <p>
-                                        Динамично развиваясь все 19 лет компания «Балтламинат» стала лидером на рынке товаров и услуг для производителей корпусной мебели в Калининградской области. 
+                                        Ваш заказ <a href="">№ 452214</a> отправлен в обработку.
                                     </p>
                                     <p>
-                                        Учитывая потребности производителей и современные тенденции мебельной индустрии, Компания постоянно предлагает клиентам качественные товары ведущих европейских производителей, позволяющие сохранять им лидерство на рынке.
-                                    </p>
-                                    <p>
-                                        Уникальность компании «Балтламинат» отражает наш девиз: «Все для производства мебели». Это означает, что материалы, фурнитура и производственные услуги сосредоточены в одном месте для удобства наших клиентов.
-                                    </p>
-                                    <p>
-                                        Особенностью также является то, что клиент «Балтламинат» может приобрести в компании не только фурнитуру и материалы для производства мебели, но и заказать изготовление отдельных деталей. Работы ведутся квалифицированными специалистами на высокотехнологичном оборудовании с использованием материалов известных мировых брендов.
-                                    </p>
-                                    <p>
-                                        «Балтламинат» специализируется на различных материалах для производства мебели. Компания предоставляет услуги по подготовке мебельных деталей к непосредственной сборке изделия: распил по вашим размерам и оклейка кромкой. Новейшее оборудование из Германии позволяет делать не только стандартные, но и необычные фигурные детали мебели по индивидуальным эскизам заказчика. Принесите размеры задуманного вами предмета интерьера и услуги компании Балтламинат позволят воплотить его в жизнь, а широкий ассортимент и наличие на складе столешниц, готовых фасадов, плитных материалов, кромочной ленты и самой разнообразной мебельной фурнитуры, а также стульев и ламината дают возможность реализовать задуманное в кратчайшие сроки.
+                                        Мы проверим наличие всех товаров на складе и отправим сообщение на почту, а так же оповестим вас о готовности к оплате в <a href="">Личном кабинете.</a>
                                     </p>
                                 </div>
                             </div>
-
                         </div>
                     </div>
                 </div>
